@@ -767,9 +767,10 @@ char *conference_unmutechannel(struct ast_cli_entry *e, int cmd, struct ast_cli_
 // play sound
 //
 static char conference_play_sound_usage[] =
-	"Usage: konference play sound <channel> (<sound-file>)+ [mute]\n"
+	"Usage: konference play sound <channel> (<sound-file>)+ [mute|tone]\n"
 	"       Play sound(s) (<sound-file>)+ to conference member <channel>\n"
 	"       If mute is specified, all other audio is muted while the sound is played back\n"
+	"       If tone is specified, the sound is discarded if another sound is queued\n"
 ;
 
 #define CONFERENCE_PLAY_SOUND_CHOICES { "konference", "play", "sound", NULL }
@@ -796,8 +797,9 @@ char *conference_play_sound(struct ast_cli_entry *e, int cmd, struct ast_cli_arg
 	char **file = &argv[4];
 
 	int mute = (argc > 5 && !strcmp(argv[argc-1], "mute")?1:0);
+	int tone = (argc > 5 && !strcmp(argv[argc-1], "tone")?1:0);
 
-	int res = play_sound_channel(fd, channel, file, mute, (!mute) ? argc - 4 : argc - 5);
+	int res = play_sound_channel(fd, channel, file, mute, tone, (!mute && !tone) ? argc - 4 : argc - 5);
 
 	if ( !res )
 	{
